@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2954 2004/05/18 16:19:52 srobert Exp $
+ * $Id: ChangeLog,v 1.2955 2004/05/18 23:09:05 walito Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,17 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-05-19 00:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hbapi.h
+  * source/vm/extend.c
+    + Added: void HB_EXPORT hb_storclenAdopt( char * szText, ULONG ulLen, int iParam, ... )
+
+  * source/rtl/cstruct.prg
+    ! Fixed :DeValue() to return Self.
+
+  * source/vm/fastitem.c
+    * Minor formating.
 
 2004-05-18 UTC-0300 Walter Negro <anegro@overnet.com.ar>
   * source/vm/arrays.c
